--- a/packages/coolone-plugin-counter/package.json
+++ b/packages/coolone-plugin-counter/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "one-plugin-counter",
-  "version": "0.2.1",
-  "author": "tgcode",
+  "name": "coolone-plugin-counter",
+  "version": "1.0.0",
+  "author": "cooloneready",
   "title": "Counter",
   "description": "一个简单的计算器",
   "keywords": [
@@ -18,8 +18,8 @@
   "homepage": "https://laixiazheteng.com/one",
   "repository": {
     "type": "git",
-    "url": "https://github.com/IronPans/one-plugins",
-    "directory": "packages/plugin-counter"
+    "url": "https://github.com/IronPans/coolone-plugins",
+    "directory": "packages/coolone-plugin-counter"
   },
   "scripts": {
     "prod": "yarn clean&&yarn build",
